feat(MED-74): sort timeslots when retrieving from db